[package]
name = "work"
version = "0.2.3"
edition = "2024"
description = "Interactive git worktree manager"
license = "MIT"
repository = "https://github.com/qiangfoo/homebrew-tap"
homepage = "https://github.com/qiangfoo/homebrew-tap"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
chrono = "0.4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
toml = "0.8"
console = "0.15"
